# News_retrieval_agents

./: .env.example  .gitignore  CLAUDE.md  README.md  USER_GUIDE.md  alembic.ini  pyproject.toml  test_keywords.py  test_twitter.py
alembic/: env.py
news_agent/: __init__.py  cli.py  config.py  emailer.py  lang.py  models.py  orchestrator.py  preference.py  scheduler.py  spam.py
news_agent/collectors/: __init__.py  base.py  github.py  linkedin.py  reddit.py  rss.py  twitter.py  youtube.py
news_agent/pipeline/: __init__.py  aggregator.py  analyzer.py  cost.py  deduplicator.py  embeddings.py  newsletter.py  podcast.py  query_router.py  ranker.py  vector_search.py
news_agent/storage/: __init__.py  database.py  exporter.py  repository.py
news_agent/web/: app.py
news_agent/web/static/: app.js  style.css
news_agent/web/templates/: digest.html  search.html
news_agent/web/templates/partials/: card.html  digest_summary.html  panel_items.html
scripts/: agent_loop_proto.py  agent_loop_report.md  agent_loop_results.json  bench_rerank.py  label_eval_set.py  rerank_bench_results.json
tests/: conftest.py  test_cli.py  test_emailer.py  test_models.py  test_orchestrator.py
tests/collectors/: test_aggregator.py  test_base.py  test_collector_state.py  test_rss.py
tests/fixtures/: rerank_eval.json
tests/pipeline/: test_analyzer.py  test_cost.py  test_deduplicator.py  test_lang.py  test_newsletter.py  test_podcast.py  test_preference.py  test_quality.py  test_query_router.py  test_ranker.py  test_spam.py
tests/scripts/: test_agent_loop_proto.py
tests/storage/: test_repository.py  test_repository_extended.py  test_search.py  test_search_filters.py
tests/web/: test_app.py  test_query_router_app.py  test_utils.py
