[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["news_agent"]

[project]
name = "news-retrieval-agents"
version = "0.1.0"
description = "AI-powered news retrieval agent for AI development and stock market news"
requires-python = ">=3.12"

dependencies = [
    # Core
    "anthropic>=0.93.0",
    "litellm>=1.40.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",

    # Sources
    "tweepy>=4.14.0",
    "praw>=7.7.0",
    "PyGithub>=2.1.0",
    "google-api-python-client>=2.100.0",
    "feedparser>=6.0.10",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",

    # Pipeline — deduplication, ranking, spam classification, language detection
    "sentence-transformers>=3.0.0",
    "transformers>=4.40.0",          # mshenoda/roberta-spam classifier pipeline
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "langdetect>=1.0.9",

    # Storage
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",

    # Scheduling
    "apscheduler>=3.10.0",

    # Podcast / newsletter TTS (OpenAI TTS primary, gTTS free fallback)
    "openai>=1.30.0",
    "gtts>=2.5.0",

    # Web UI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
]

[project.scripts]
news-agent = "news_agent.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
